--- a/TODO
+++ b/TODO
@@ -13,7 +13,8 @@
 [done] Sort search result in search view alphabetically and/or by relevance?
 - Effects?
 [done] Tooltips
-[done] Theming
+[done] Theming (styling)
+[done] Theming (layouting)
 [done] Fix daemon mode
 
 == QUICKLAUNCH-BOX (FAVOURITES-SELECTOR) ==
