--- a/README
+++ b/README
@@ -29,3 +29,7 @@ Documentation
 =============
 
 A simple quick guide with screenshots can be found at http://xfdashboard.froevel.de/doc.html
+
+Documentation about theming xfdashboard can be found at http://xfdashboard.froevel.de/theming.html
+
+Documentation about settings in xfdashboard can be found at http://xfdashboard.froevel.de/settings.html
